<resources>
    <string name="app_name">MobileComputingProject</string>
    <string name="title_activity_maps_weather">Map</string>

    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press ADD NEW NOTIFICATION button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="channel_name">1</string>
    <string name="channel_description">channel 1</string>
    <string name="time_current">The Notification set time is:</string>
    <string name="set_notification">Set Notification</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an Account? Sign Up</string>
</resources>
