<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_above="@id/input_group"
        android:fitsSystemWindows="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/umbrellaImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="left"
                android:src="@drawable/umbrella"
                android:translationZ="1.0dp"
                android:contentDescription="TODO" />

            <ImageView
                android:id="@+id/windMillImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/windmill"
                android:translationZ="1.0dp" />
            <ImageView
                android:id="@+id/rainbow"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/rainbow"
                android:translationZ="1.0dp"
                android:layout_gravity="right"/>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:fitsSystemWindows="true"
        >


        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_top"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:fitsSystemWindows="true"
            tools:ignore="TextFields"
            android:autofillHints="Email" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bottom"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:fitsSystemWindows="true"
            android:autofillHints="" />


        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#FE5295"
            android:textSize="17sp"
            android:fitsSystemWindows="true"/>

        <TextView
            android:id="@+id/signUp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:textStyle="bold"
            android:textColor="#135058"
            android:fontFamily="sans-serif"
            android:fitsSystemWindows="true"/>


    </LinearLayout>
</RelativeLayout>